# arm_scenario_simulator

./: .gitignore  CMakeLists.txt  README.md  fix_gazebo_setup  fix_gazebo_setup.py  fix_gazebo_setup.sh  package.xml  setup.py  setup.sh
launch/: baxter_world.launch
models/DREAM_baxter/urdf/: baxter.urdf.xacro  left_end_effector.urdf.xacro
models/DREAM_baxter/urdf/baxter_base/: baxter_base.gazebo.xacro  baxter_base.urdf.xacro
models/DREAM_baxter/urdf/pedestal/: pedestal.xacro
models/DREAM_camera/: model.config  model.sdf
models/DREAM_cube/: model.config  model.sdf
models/DREAM_cylinder/: model.sdf
models/DREAM_goal_area/: model.sdf
models/DREAM_lever/: model.sdf
models/DREAM_lever/freecad/: base.fcstd  lever.fcstd
models/DREAM_lever/meshes/: base.dae  lever.dae
models/DREAM_lever/plugins/: CMakeLists.txt  lever_sensor.cc
models/DREAM_light_round/: model.config  model.sdf
models/DREAM_light_round/plugins/: CMakeLists.txt  change_color.cc
models/DREAM_light_square/: model.config  model.sdf
models/DREAM_push_button/: model.sdf
models/DREAM_push_button/freecad/: base.fcstd
models/DREAM_push_button/meshes/: button.dae
models/DREAM_push_button/plugins/: CMakeLists.txt  button_sensor.cc  button_spring.cc
models/DREAM_setup/: model.config  model.sdf
models/DREAM_setup/meshes/: untitled2.dae
models/DREAM_table/: model.config  model.sdf
models/DREAM_table/freecad/: setup.fcstd  setup2.fcstd
models/DREAM_table/materials/scripts/: DREAM_setup.material
models/DREAM_table/meshes/: setup.dae  setup2.dae
models/DREAM_table/plugins/: CMakeLists.txt  ContactPlugin.cc  ContactPlugin.hh
models/DREAM_table/tableblocker/: model.config  model.sdf
models/cube/: model.sdf
models/cylinder/: model.config  model.sdf
models/lever/: model.config  model.sdf
models/lever/freecad/: lever.fcstd1
models/lever/plugins/: CMakeLists.txt  lever_sensor.cc
models/push_button/: model.config  model.sdf
models/push_button/freecad/: button.fcstd
models/push_button/meshes/: base.dae
models/push_button/plugins/: CMakeLists.txt  button_sensor.cc  button_spring.cc
msg/: Int8Stamped.msg  MaterialColor.msg
scripts/: button_box_setup.py  goto_init_pose  goto_init_pose.py  head_controler_fix  head_controller_fix  ik_babbler.py  main.py  planning_setup.py  spawn_objects.py  spawn_objects_example
src/arm_scenario_simulator/: __init__.py  button.py  gazeboObject.py  head_controller_simulator_fix  head_simulator_fix.py  lever.py  light.py  parameters.py  pocket.py
srv/: GetObjectState.srv  LightState.srv  RestartWorld.srv  SetLightState.srv
worlds/: setup.world
